--- a/css/pages/product.css
+++ b/css/pages/product.css
@@ -193,10 +193,21 @@ nav ul li:hover{
     border-radius: 10px;
 }
 
+.user-info{
+    display: flex;
+    align-items: center;
+}
+
 .user-info img{
-    width: 102px;
-    height: 102px;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
+    margin-left: 10px;
+}
+
+.user-info i{
+    margin-left: 10px;
+    color: #000000;
 }
 
 #first-element{
@@ -394,12 +405,13 @@ nav ul li:hover{
 }
 
 .five-star h3,i{
+    margin-top: 10px;
     font-size: 24px;
     font-weight: 500;
     line-height: 36px;
     text-align: left;
     color: #FFA500; 
-    padding-right:10px ;
+    padding-right:20px ;
 }
 
 .five-star h6{
@@ -408,6 +420,7 @@ nav ul li:hover{
     line-height: 21px;
     text-align: left;
     color:#6E6E6E;
+    margin-top: 10px;
 }
 
 
@@ -739,20 +752,7 @@ hr{
     line-height: 36px;
   }
 
-  .other-product{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-left: 12rem;
-    margin-right: 12rem;
-    margin-bottom: 90px;
-  }
-
-  .my-products{
-    display:flex;
-  }
-
-  #other-products{
+#other-products{
     margin-top: 70px;
     margin-bottom: -20px;
     font-size: 24px;
@@ -762,6 +762,7 @@ hr{
     color: #2E2E2E;
   }
 
+ 
 .cart{
     display: flex;
     justify-content: space-between;
